--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   
   <p class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/sebastienpuigrenier?tab=repositories">S. Puigrenier <i class="fas fa-external-link-alt"></i></a>.
+    Coded by <a href="https://github.com/sebastienpuigrenier?tab=repositories">Niraj Shaha <i class="fas fa-external-link-alt"></i></a>.
   </p>
 </body>
 </html>
